# ceph-csi-operator

./: .flake8  .gitignore  .gitignore.swp  .pylintrc  .wokeignore  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests  tox.ini
.github/workflows/: main.yaml  vsphere-integration.yaml
src/: ceph_csi.py  cephfs_manifests.py  charm.py  config_manifest.py  k8s_name_validator.py  literals.py  manifests_base.py  manifests_cephfs.py  manifests_config.py  manifests_rbd.py  rbd_manifests.py  resource.py  resources.py  safe_manifests.py  utils.py
templates/: ceph-conf.yaml.j2  ceph-secret.yaml.j2  ceph-storageclass.yaml.j2  csi-config-map.yaml.j2  csi-nodeplugin-rbac.yaml.j2  csi-provisioner-rbac.yaml.j2  csi-rbdplugin-provisioner.yaml.j2  csi-rbdplugin.yaml.j2
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_charm.py
tests/functional/: bundle.yaml  charmed-ceph.yaml  conftest.py  overlay.yaml  test_ceph_csi.py  test_charmed_ceph.py  test_microceph.py  utils.py
tests/functional/templates/: persistent_volume.yaml.j2  reading_pod.yaml.j2  (+2 more)
tests/integration/: conftest.py  overlay.yaml  test_ceph_csi.py  utils.py
tests/unit/: conftest.py  test_ceph_csi.py  test_charm.py  test_k8s_name_validator.py  test_lib_charms_ceph_csi_v0_ceph_client.py  test_manifests_base.py  test_manifests_cephfs.py  test_manifests_config.py  test_manifests_rbd.py  test_resource.py  test_rfc1123_validation.py  test_utils.py
upstream/: update.py
(+63 files in other folders)
